# tape

./: .gitignore  CMakeLists.txt  audio.cpp  main.cpp  tape.cpp  tape.txt
include/: audio.hpp  tape.hpp  wave.hpp
